# cryptoquantengine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
config/: asset_config.txt  backtest_config.txt  backtest_engine_config.txt  grid_trading_config.txt  recorder_config.txt
cryptoquantengine/: backtest_main.cpp  benchmark.cc  wss_main.cc  wss_main.cpp
cryptoquantengine/core/backtest_engine/: backtest_engine.cpp  backtest_engine.h
cryptoquantengine/core/execution_engine/: execution_engine.cpp  execution_engine.h
cryptoquantengine/core/market_data/: market_data_feed.cpp  market_data_feed.h  trade.h
cryptoquantengine/core/market_data/readers/: base_stream_reader.cpp  book_stream_reader.cpp  trade_stream_reader.cpp  trade_stream_reader.h
cryptoquantengine/core/market_data/readers/ws/: binance_stream_reader.cc  binance_stream_reader.h  websocket_stream_reader.cc  websocket_stream_reader.h
cryptoquantengine/core/orderbook/: orderbook.cpp  orderbook.h
cryptoquantengine/core/recorder/: equity_snapshot.h  plot_recorder.py  recorder.cpp  recorder.h
cryptoquantengine/core/strategy/: strategy.h
cryptoquantengine/core/strategy/grid_trading/: grid_trading.cpp  grid_trading.h
cryptoquantengine/core/trading/: asset_config.h  depth.h  order_update.h
cryptoquantengine/core/types/aliases/: usings.h
cryptoquantengine/core/types/enums/: event_type.h  order_event_type.h  order_status.h  order_type.h  time_in_force.h  trade_side.h
cryptoquantengine/utils/config/: config_reader.cpp  config_reader.h
cryptoquantengine/utils/http/: http_utils.h
cryptoquantengine/utils/logger/: logger.h
cryptoquantengine/utils/stat/: stat_utils.h
docs/: configuration.md  data.md  data_feed.md  examples.md  index.md  strategies.md  usage.md
docs/api/: backtest_engine.md  config_reader.md  recorder.md
hftengine/: backtest_main.cpp  main.cpp
hftengine/core/backtest_engine/: backtest_asset.h  backtest_config.h  backtest_engine.cpp  backtest_engine.h  backtest_engine_config.h
hftengine/core/data/: market_data_feed.cpp  market_data_feed.h
hftengine/core/data/readers/: book_stream_reader.cpp  book_stream_reader.h  book_stream_reader.hpp  l2_stream_reader.cpp  l2_stream_reader.hpp  market_data_feed.cpp  market_data_feed.h  market_data_feed.hpp  trade_stream_reader.cpp  trade_stream_reader.h  trade_stream_reader.hpp
hftengine/core/execution_engine/: execution_engine.cpp  execution_engine.h
hftengine/core/market_data/: book_update.h  l2_update.h  level_update.h  market_data_feed.cpp  market_data_feed.h  trade.h
hftengine/core/market_data/readers/: base_stream_reader.cpp  base_stream_reader.h  book_stream_reader.cpp  book_stream_reader.h  trade_stream_reader.cpp  trade_stream_reader.h
hftengine/core/orderbook/: orderbook.cpp  orderbook.h
hftengine/core/recorder/: equity_snapshot.h  plot_recorder.py  recorder.cpp  recorder.h  recorder_config.h  state_snapshot.h
hftengine/core/strategy/: grid_trading.cpp  grid_trading.h  grid_trading_config.h  gridtrading_config.h  strategy.h
hftengine/core/strategy/grid_trading/: grid_trading.cpp  grid_trading.h  grid_trading_config.h
hftengine/core/trading/: asset_config.h  backtest_asset.h  backtest_config.h  backtest_engine.cpp  backtest_engine.h  backtest_engine_config.h  depth.h  fill.h  order.h  orderId_generator.h  order_update.h
hftengine/core/types/: action_type.h  book_side.h  event_type.h  order_event_type.h  order_status.h  order_type.h  queue_model.h  trade_side.h  update_type.h  usings.h
hftengine/core/types/aliases/: usings.h
hftengine/core/types/enums/: action_type.h  book_side.h  event_type.h  order_event_type.h  order_status.h  time_in_force.h  trade_side.h  update_type.h
hftengine/py/: util.py
hftengine/utils/config/: config_reader.cpp  config_reader.h  config_reader.hpp
hftengine/utils/logger/: log_level.h  logger.cpp  logger.h
hftengine/utils/math/: math_utils.h
hftengine/utils/stat/: stat_utils.h
tests/: test_backtest_engine.cpp  test_book_stream_reader.cpp  test_config_reader.cpp  test_execution_engine.cpp  test_l2_stream_reader.cpp  test_market_data_feed.cpp  test_orderbook.cpp  test_recorder.cpp  test_stat_utils.cpp  test_trade_stream_reader.cpp
tests/core/: test_backtest_engine.cpp  test_execution_engine.cpp  test_orderbook.cpp  test_recorder.cpp
tests/market_data/: test_book_stream_reader.cpp  test_market_data_feed.cpp  test_trade_stream_reader.cpp
tests/market_data/live/: test_binance_stream_reader.cpp
tests/strategies/: test_grid_trading.cpp
tests/utils/: test_config_reader.cpp  test_logger.cpp  test_math_utils.cpp  test_stat_utils.cpp
